fix: prev/next buttons now don't jump up and down based on text length

--- a/src/dm-calendar/dm-calendar.css
+++ b/src/dm-calendar/dm-calendar.css
@@ -91,3 +91,9 @@
 .fc .fc-daygrid-dot-event:hover {
     background: var(--fc-highlight-color);
 }
+
+@media screen and (max-width: 512px) {
+    .fc .fc-header-toolbar > .fc-toolbar-chunk:nth-child(3) {
+        align-self: start;
+    }
+}
